--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,55 +1,84 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint"
+	"env": {
+		"browser": true,
+		"es2021": true
+	},
+	"extends": [
+		"plugin:react/recommended",
+		"airbnb"
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": 12,
+		"sourceType": "module"
+	},
+	"plugins": [
+		"react",
+		"@typescript-eslint"
 	],
 	"settings": {
 		"import/resolver": {
 			"node": {
-				"extensions": [".js", ".jsx", ".ts", ".tsx"]
+				"extensions": [
+					".js",
+					".jsx",
+					".ts",
+					".tsx"
+				]
 			}
 		}
 	},
 	"overrides": [
 		{
-		  "files": [
-			"**/*.test.ts",
-			"**/*.test.tsx"
-		  ],
-		  "env": {
-			"jest": true
-		  }
+			"files": [
+				"**/*.test.ts",
+				"**/*.test.tsx"
+			],
+			"env": {
+				"jest": true
+			}
 		}
-	  ],
-    "rules": {
-		"react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+	],
+	"rules": {
+		"react/jsx-filename-extension": [
+			2,
+			{
+				"extensions": [
+					".js",
+					".jsx",
+					".ts",
+					".tsx"
+				]
+			}
+		],
 		"react/react-in-jsx-scope": "off",
-		"semi":"off",
-        "indent":["error", "tab"],
-        "no-tabs":"off",
-        "react/jsx-indent": ["error", "tab"],
-		"react/jsx-indent-props": ["error", "tab"],
+		"semi": "off",
+		"indent": [
+			"error",
+			"tab",
+			{
+				"SwitchCase": 1
+			}
+		],
+		"no-tabs": "off",
+		"react/jsx-indent": [
+			"error",
+			"tab"
+		],
+		"react/jsx-indent-props": [
+			"error",
+			"tab"
+		],
 		"no-use-before-define": "off",
-		"@typescript-eslint/no-use-before-define": ["error"],
+		"@typescript-eslint/no-use-before-define": [
+			"error"
+		],
 		"import/extensions": [
-		"error",
-		"ignorePackages",
+			"error",
+			"ignorePackages",
 			{
 				"js": "never",
 				"jsx": "never",
@@ -59,10 +88,8 @@
 		],
 		"react/prop-types": "off",
 		"no-unused-vars": "off",
-		"@typescript-eslint/no-unused-vars": ["error"]
+		"@typescript-eslint/no-unused-vars": [
+			"error"
+		]
 	}
 }
-
-
-
-
